--- a/package.json
+++ b/package.json
@@ -4,15 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest --watch"
+    "test": "jest --watchAll"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "eslint-config-prettier": "^8.5.0",
-    "jest": "^27.3.1",
-    "prettier": "2.8.1"
+    "jest": "^27.3.1"
   },
   "dependencies": {
     "@types/jest": "^27.0.2"
